# axuaura

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
.github/workflows/: buildtest.yml  format.yml  licenses.yml
include/: backup.h  bazaar.h  buttons.h  commands.h  config.h  db.h  dotenv.h  env.h  events.h  image.h  image_constants.h  inventory.h  message.h  messages.h  roles.h  utils.h  voice.h  xp.h
src/: botjson.h  main.cpp
src/commands/: auraboard.cpp  auraduel.cpp  auragamble.cpp  aurapoll.cpp  bazaar.cpp  coinflip.cpp  credits.cpp  ctxm_giveitm.cpp  ctxm_mkshm.cpp  diagnostics.cpp  echo.cpp  fixlevels.cpp  handler.cpp  inventory.cpp  leaderboard.cpp  levels.cpp  mkspl.cpp  movaura.cpp  setlevel.cpp  settings.cpp  smite.cpp  starboard.cpp
src/commands/aura/: auraboard.cpp  auracheck.cpp
src/commands/bazaar/: bazaar_admin_items.cpp  bazaar_admin_manage.cpp  bazaar_def.cpp  bazaar_rotation.cpp  bazaar_user.cpp
src/commands/gamble/: gamble.cpp  gamble_flip.cpp  gamble_slots.cpp
src/commands/inventory/: inv_button.cpp  inv_def.cpp  inv_equip.cpp  inv_view.cpp
src/core/: backup.cpp  buttons.cpp  config.cpp  events.cpp  image.cpp  message.cpp  messages.cpp  roles.cpp  utils.cpp  voice.cpp  xp.cpp
src/core/messages/: message.cpp  msg_aura.cpp  msg_drop.cpp
src/database/: db.cpp  db_aura.cpp  db_badges.cpp  db_banner.cpp  db_bazaar.cpp  db_duels.cpp  db_eco.cpp  db_init.cpp  db_inv.cpp  db_inv_xp.cpp  db_migrate.cpp  db_optimize.cpp  db_ping.cpp  db_polls.cpp  db_rotation.cpp  db_settings.cpp  db_shop_get.cpp  db_starboard.cpp  db_voice.cpp  db_xp.cpp  db_xp_boost.cpp
src/image/: image.cpp  image_bazaar.cpp  image_level.cpp
src/image/bazaar/: image_b_bg.cpp  image_b_item.cpp  image_inv_placard.cpp
src/image/boards/: image_boards.cpp
src/image/inventory/: image_inventory.cpp
src/image/levels/: image_l_card.cpp
tests/: test_framework.h  test_main.cpp
tools/: axuctl.cpp
tools/axuctl/: axuctl.h  ctl_badge.cpp  ctl_bg.cpp  ctl_guild.cpp  ctl_main.cpp  ctl_xpboost.cpp
